@@ -2,6 +2,7 @@ package cv.inps.rh.assiduidade.application.services;
 
 import cv.inps.rh.assiduidade.application.dto.FaltaItemDTO;
 import cv.inps.rh.assiduidade.application.dto.JustificarFaltaDTO;
+import cv.inps.rh.assiduidade.application.dto.ResumoFaltaMesDTO;
 import cv.inps.rh.assiduidade.application.queries.GetJustificacaoFaltaByPedidoQuery;
 import cv.inps.rh.assiduidade.application.queries.GetJustificacaoFaltaQuery;
 import cv.inps.rh.funcionario.infrastructure.mappers.DocumentoMapper;
@@ -14,15 +15,20 @@ import cv.inps.rh.shared.infrastructure.persistence.entity.AssiduidadeSinteseDia
 import cv.inps.rh.shared.infrastructure.persistence.entity.DocumentoEntity;
 import cv.inps.rh.shared.infrastructure.persistence.entity.FaltaEntity;
 import cv.inps.rh.shared.infrastructure.persistence.entity.FuncionarioEntity;
+import cv.inps.rh.shared.infrastructure.persistence.entity.PedidoEntity;
 import cv.inps.rh.shared.infrastructure.persistence.repository.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
+import java.math.BigDecimal;
 import java.time.LocalDate;
+import java.util.Comparator;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.UUID;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -44,9 +50,11 @@ public class JustificarFaltaReadService {
    * "Inactiva" — neste ecrã o estado inactivo resulta de o RH ter recusado a
    * justificação.
    */
+  private static final String ESTADO_POR_JUSTIFICAR = "Por justificar";
+
   private static String descreverEstadoFalta(Estado estado) {
     if (estado == null)
-      return "Por justificar";
+      return ESTADO_POR_JUSTIFICAR;
     return switch (estado) {
       case P -> "Pendente";
       case A -> "Justificada";
@@ -55,8 +63,37 @@ public class JustificarFaltaReadService {
     };
   }
 
+  /**
+   * Anexos do bloco "Justificar Faltas Selecionadas": pertencem ao PEDIDO, não a um dia
+   * (ver JustificarFaltaWriteService). Os anexos de um dia continuam em RH_T_FALTA e são
+   * devolvidos em {@code FaltaItemDTO.documento}.
+   */
+  private List<AnexoReqDTO> anexosDoPedido(PedidoEntity pedido) {
+    if (pedido == null || pedido.getUuid() == null)
+      return new java.util.ArrayList<>();
+    return documentoEntityRepository
+        .findAllByReferenciaNameAndReferenciaUuid(TableName.RH_T_PEDIDO.name(), pedido.getUuid())
+        .stream()
+        .map(doc -> {
+          var anexo = new AnexoReqDTO();
+          anexo.setId(doc.getId());
+          anexo.setTipoDocumentoId(doc.getTpDocumentoId() != null ? doc.getTpDocumentoId().getId() : null);
+          anexo.setDocumento(doc.getUrl());
+          return anexo;
+        })
+        .collect(Collectors.toCollection(java.util.ArrayList::new));
+  }
+
+  /** Data de uma falta: a da síntese diária que a originou, ou a sua própria data de início. */
+  private static LocalDate dataDaFalta(FaltaEntity f) {
+    var sintese = f.getSinteseDiarioId();
+    if (sintese != null && sintese.getData() != null)
+      return sintese.getData();
+    return f.getDataInicio() != null ? f.getDataInicio().toLocalDate() : null;
+  }
+
   @Transactional(readOnly = true)
-  public JustificarFaltaDTO getFaltaJustificadaResumo(GetJustificacaoFaltaQuery query) {
+  public ResumoFaltaMesDTO getFaltaJustificadaResumo(GetJustificacaoFaltaQuery query) {
 
     UUID funcUuid;
     try {
@@ -76,7 +113,7 @@ public class JustificarFaltaReadService {
 
     // Buscar todas as sínteses diárias do funcionário no mês
     List<AssiduidadeSinteseDiarioEntity> sinteses = assiduidadeSinteseDiarioEntityRepository
-        .findAllByFuncionarioIdAndDataBetween(funcionario, inicioMes, fimMes);
+        .findAllByFuncionarioIdAndDataBetweenOrderByDataAsc(funcionario, inicioMes, fimMes);
 
     // Faltas já registadas no período, indexadas pela síntese que as originou.
     // Sem isto o resumo não conseguiria mostrar o estado de cada dia
@@ -85,39 +122,59 @@ public class JustificarFaltaReadService {
         .findAllByFuncionarioAndPeriodo(funcUuid, inicioMes, fimMes)
         .stream()
         .filter(f -> f.getSinteseDiarioId() != null)
+        .sorted(Comparator.comparing(JustificarFaltaReadService::dataDaFalta,
+            Comparator.nullsLast(Comparator.naturalOrder())))
         .collect(Collectors.toMap(
             f -> f.getSinteseDiarioId().getId(),
             Function.identity(),
-            (a, b) -> a));
+            (a, b) -> a,
+            LinkedHashMap::new));
 
-    List<FaltaItemDTO> itensFalta = sinteses.stream().map(s -> {
-      FaltaItemDTO item = new FaltaItemDTO();
-      item.setId(s.getId());
-      item.setData(s.getData().toString());
-      // Normalizado para HH:MM — Oracle devolve o INTERVAL como "0 5:20:0.0" e o
-      // frontend não tem de conhecer esse formato.
-      item.setHorasAusencia(TimeUtils.intervalFormatToHHmm(s.getHorasAusencia()));
+    // Os dias JÁ justificados não vêm soltos: vão agrupados no pedido a que pertencem
+    // (dto.pedidos), cada grupo com o cabeçalho completo do formulário, para o Editar abrir
+    // sem uma segunda chamada. Soltos ficam só os dias que ainda não têm falta associada —
+    // os que a lista da esquerda oferece para seleccionar e justificar.
+    List<FaltaItemDTO> itensFalta = sinteses.stream()
+        .filter(sin -> !faltaPorSintese.containsKey(sin.getId()))
+        .map(sin -> {
+          FaltaItemDTO item = new FaltaItemDTO();
+          item.setId(sin.getId());
+          item.setData(sin.getData().toString());
+          // Normalizado para HH:MM — Oracle devolve o INTERVAL como "0 5:20:0.0" e o
+          // frontend não tem de conhecer esse formato.
+          item.setHorasAusencia(TimeUtils.intervalFormatToHHmm(sin.getHorasAusencia()));
+          item.setEstadoDesc(ESTADO_POR_JUSTIFICAR);
+          return item;
+        })
+        .toList();
 
-      var falta = faltaPorSintese.get(s.getId());
-      if (falta != null) {
-        item.setEstado(falta.getEstado() != null ? falta.getEstado().getCode() : null);
-        item.setEstadoDesc(descreverEstadoFalta(falta.getEstado()));
-        item.setMotivo(falta.getDescricaoMotivo());
-        item.setComJustificativo(falta.getFlgJustificativo());
-        item.setTipoFalta(falta.getParamSitId() != null ? falta.getParamSitId().getNome() : null);
-        item.setValorAusencia(falta.getValor() != null ? falta.getValor().intValue() : null);
-      } else {
-        // Dia com ausência mas ainda sem pedido de justificação.
-        item.setEstadoDesc("Por justificar");
-      }
-      return item;
-    }).toList();
+    // Um grupo por pedido, na ordem do dia mais antigo. Só as faltas DESTE mês entram no
+    // grupo: o painel é do mês consultado e um pedido pode atravessar dois meses — para o
+    // pedido completo há o GET .../pedido/{pedidoUuid}.
+    List<JustificarFaltaDTO> pedidos = faltaPorSintese.values().stream()
+        .filter(f -> f.getPedidoId() != null)
+        .collect(Collectors.groupingBy(
+            f -> f.getPedidoId().getId(),
+            LinkedHashMap::new,
+            Collectors.toList()))
+        .values().stream()
+        .map(faltasDoPedido -> {
+          var ordenadas = faltasDoPedido.stream()
+              .sorted(Comparator.comparing(JustificarFaltaReadService::dataDaFalta,
+                  Comparator.nullsLast(Comparator.naturalOrder())))
+              .toList();
+          return montarGrupo(ordenadas.getFirst().getPedidoId(), ordenadas);
+        })
+        .sorted(Comparator.comparing(
+            g -> g.getItensFalta().isEmpty() ? null : g.getItensFalta().getFirst().getData(),
+            Comparator.nullsLast(Comparator.naturalOrder())))
+        .toList();
 
-    // Montar DTO principal
-    JustificarFaltaDTO dto = new JustificarFaltaDTO();
+    var dto = new ResumoFaltaMesDTO();
     dto.setColaboradorId(funcionario.getUuid());
     dto.setNomeColaborador(funcionario.getNome());
     dto.setItensFalta(itensFalta);
+    dto.setPedidos(pedidos);
     dto.setAno(query.getAno());
     dto.setMes(query.getMes());
 
@@ -143,14 +200,24 @@ public class JustificarFaltaReadService {
         .orElseThrow(() -> IgrpResponseStatusException.notFound(
             "Pedido não encontrado com UUID: " + pedidoUuid));
 
+    // Buscar todas as faltas associadas ao pedido
+    List<FaltaEntity> faltas = faltaRepository.findAllByPedidoIdOrderByDataInicioAsc(pedido);
+
+    var dto = montarGrupo(pedido, faltas);
+
+    return dto;
+  }
+
+  /**
+   * Um pedido de justificação como o formulário o mostra: o cabeçalho do bloco "Justificar
+   * Faltas Selecionadas" (motivo, tipo, dedução, valores, parecer, responsável, anexos) mais
+   * os dias que o compõem. É a mesma forma devolvida pelo GET .../pedido/{pedidoUuid} e por
+   * cada elemento de {@code pedidos} no GET do mês, para o frontend ter um só formato.
+   */
+  private JustificarFaltaDTO montarGrupo(PedidoEntity pedido, List<FaltaEntity> faltas) {
+
     var funcionario = pedido.getFunId();
 
-    // Buscar todas as faltas associadas ao pedido
-    List<FaltaEntity> faltas = faltaRepository.findAllByPedidoId(pedido);
-
-
-
-    // Mapear para FaltaItemDTO
     List<FaltaItemDTO> itensFalta = faltas.stream().map(f -> {
       var item = new FaltaItemDTO();
       // Nem toda a falta nasce de uma síntese diária: as que a baixa médica gera a
@@ -169,37 +236,53 @@ public class JustificarFaltaReadService {
       item.setComJustificativo(f.getFlgJustificativo());
       item.setEstado(f.getEstado() != null ? f.getEstado().getCode() : null);
       item.setEstadoDesc(descreverEstadoFalta(f.getEstado()));
-
-      List<DocumentoEntity> documentos = documentoEntityRepository
-          .findAllByReferenciaNameAndReferenciaUuid(TableName.RH_T_FALTA.name(), f.getUuid());
-
-      if (!documentos.isEmpty()) {
-        DocumentoEntity doc = documentos.getFirst(); // Pegando o primeiro documento como exemplo
-        AnexoReqDTO anexo = new AnexoReqDTO();
-        anexo.setId(doc.getId());
-        anexo.setTipoDocumentoId(doc.getTpDocumentoId() != null ? doc.getTpDocumentoId().getId() : null);
-        anexo.setDocumento(doc.getUrl());
-        item.setDocumento(anexo);
-      }
-
+      // Anexos não são por dia: vêm em dto.documentos, do pedido (ver anexosDoPedido).
       return item;
     }).toList();
 
-    // Montar DTO principal
     var dto = new JustificarFaltaDTO();
     dto.setColaboradorId(funcionario.getUuid());
     dto.setNomeColaborador(funcionario.getNome());
     dto.setItensFalta(itensFalta);
+    dto.setPedidoId(pedido.getUuid());
+    dto.setDocumentos(anexosDoPedido(pedido));
+    // Estado do pedido, não das faltas: o ecrã precisa dele para saber se o grupo está à
+    // espera de despacho (P) ou já fechado (A/I).
+    dto.setEstado(pedido.getEstado());
+    dto.setEstadoDesc(pedido.getEstado() != null
+        ? Estado.fromCode(pedido.getEstado()).map(Estado::getDescription).orElse(null)
+        : null);
+    dto.setEtapa(pedido.getEtapa());
 
-    // Campos de decisão, despacho e tipoJustificacao podem ser preenchidos a partir
-    // da primeira falta
+    // Cabeçalho do formulário: o pedido é gravado com os mesmos valores em todas as suas
+    // faltas (ver JustificarFaltaWriteService), por isso lê-se da primeira — excepto o
+    // valor total, que é a soma dos dias, tal como o POST o devolve.
     if (!faltas.isEmpty()) {
       var primeira = faltas.getFirst();
       dto.setParecerResponsavel(primeira.getDecisaoResponsavel());
       dto.setResponsavelId(primeira.getResponsavelId() != null ? primeira.getResponsavelId().getId() : null);
       dto.setObsResponsavel(primeira.getObsResponsavel());
-      dto.setDespachoRh(primeira.getDespachoRh());
       dto.setTipoJustificacao(primeira.getParamSitId() != null ? primeira.getParamSitId().getId() : null);
+      dto.setMotivo(primeira.getDescricaoMotivo());
+      dto.setComJustificativo(primeira.getFlgJustificativo());
+      dto.setDeduzirFaltaEm(primeira.getFlgDescontoFalta());
+      dto.setValorDiario(primeira.getValor());
+      dto.setValorTotal(faltas.stream()
+          .map(FaltaEntity::getValor)
+          .filter(Objects::nonNull)
+          .reduce(BigDecimal.ZERO, BigDecimal::add));
+
+      // Mês de referência: é por ele que o ecrã volta à lista depois de editar. Vem da
+      // falta mais antiga do pedido (síntese diária, ou a data da falta quando não há
+      // síntese — caso das faltas geradas pela baixa médica).
+      faltas.stream()
+          .map(JustificarFaltaReadService::dataDaFalta)
+          .filter(Objects::nonNull)
+          .min(LocalDate::compareTo)
+          .ifPresent(d -> {
+            dto.setAno(d.getYear());
+            dto.setMes(d.getMonthValue());
+          });
     }
 
     return dto;
